# mj-experiments

./: main.py  pyproject.toml
experiments/: standing_g1_robot.py
experiments/standing_policy/: standing_env_cfg.py
src/mj_experiments/: standing_env_cfg.py
