[project]
name = "mj-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["mjlab>=0.0.4", "ruff>=0.14.8"]

[tool.ruff]
indent-width = 2
src = ["experiments"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[dependency-groups]
dev = ["pyright>=1.1.407", "ty>=0.0.1a26"]

[project.entry-points."mjlab.tasks"]
g1_standing = "standing_policy"
